--- a/client/src/components/style.css
+++ b/client/src/components/style.css
@@ -256,7 +256,6 @@ ul {
   color: #757575;
   font-size: 15px;
 }
-
 .footer-content {
   position: relative;
   z-index: 2;
@@ -338,7 +337,6 @@ ul {
   color: #878787;
   text-transform: capitalize;
 }
-
 .subscribe-form {
   position: relative;
   overflow: hidden;
@@ -386,7 +384,6 @@ ul {
   font-size: 14px;
   color: #878787;
 }
-
 @media screen and (max-width: 500px) {
   div.formRoot,
   select.custom-select,
@@ -474,31 +471,48 @@ ul {
     padding-right: 10px;
   }
 }
+.form-group {
+   display: flex;
+   flex-direction: row;
+    align-content: space-between;
+    justify-content: space-evenly;
+
+}
 @media only screen and (max-width: 800px) {
+  .form-group {
+    flex-direction: column;
+  }
   .form1 {
     display: flex;
+    flex-direction: row;
     justify-content: center;
     -webkit-border-radius: 4px;
     border-radius: 4px;
+   
   }
   .form2 {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     margin-top: 2%;
+    
     -webkit-border-radius: 4px;
     border-radius: 4px;
   }
-  .form1 > .textbox {
-    margin-left: -20%;
-  }
-  .form2 > .textbox {
-    margin-left: 12.5%;
-  }
+
 }
 .form1 {
   -webkit-border-radius: 4px;
   border-radius: 4px;
-  margin-left: 27%;
+  
+}
+.grid-box{
+  padding-left:10%;
+  padding-right: 10%;
+  align-content: center;
+  justify-content: center;
+  display: flex;
+  
 }
 .form2 {
   -webkit-border-radius: 4px;
@@ -524,7 +538,7 @@ form > .button {
   background-color: rgba(38, 50, 56, 0.8);
   float: left;
   height: 42px;
-  width: 42px;
+  width: 80px;
   text-align: center;
   line-height: 42px;
   margin-right: 2%;
@@ -864,6 +878,8 @@ h5 {
   align-items: center;
   justify-content: center;
 }
+
+
 .bigbtn {
   width: 650px;
   padding: 17px;
